Changed buildcontainer to Java 11