@@ -732,7 +732,7 @@ public class SemanticSearchDialog extends BaseTransformDialog implements ITransf
         if (r != null) {
           String[] stringTypeFieldNames = r.getValueMetaList().stream()
               .filter(meta -> meta.getType() == IValueMeta.TYPE_STRING)
-              .map(meta -> meta.getName()).toList().toArray(new String[0]);
+              .map(meta -> meta.getName()).collect(Collectors.toList()).toArray(new String[0]);
           wLookupTextField.setItems(stringTypeFieldNames);
         }
       } catch (HopException ke) {
@@ -759,7 +759,7 @@ public class SemanticSearchDialog extends BaseTransformDialog implements ITransf
         if (r != null) {
           String[] stringTypeFieldNames = r.getValueMetaList().stream()
               .filter(meta -> meta.getType() == IValueMeta.TYPE_STRING)
-              .map(meta -> meta.getName()).toList().toArray(new String[0]);
+              .map(meta -> meta.getName()).collect(Collectors.toList()).toArray(new String[0]);
           wLookupKeyField.setItems(stringTypeFieldNames);
         }
       } catch (HopException ke) {
